more content to about page

--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -27,7 +27,7 @@ block content
           // hidden on mobile
           .about__clients
             .about__client-logo
-            
+              img(src="img/clients.png" srcset='img/clients@2x.png 2x')
           .about__skills
             .about__skills-title
               .about__skills-parallax
@@ -39,3 +39,41 @@ block content
               span CSS
               span HTML
               span JQUERY
+          
+    // section description
+    .about__section
+      .about__general.t-text-small
+        .about__general-content
+          .about__general-parallax
+          .container
+            p I'm an enthusiastic and passionate web development specialist; an early adopter and tech lead who enjoys using JavaScript, CSS, and HTML together to develop innovative solutions to online problems, and to design and implement beautiful, accessible, websites.
+        .about__general-content
+          .container
+            p Often working with UX teams or designers (occasionally from flat designs - PSD or Sketch - or wireframes), I ensure that my projects are pixel-perfect, optimised, responsive, cross-browser compatible, and accessible for you, your customers, and search engines. My work performs regardless of whether it is accessed using my Grandmother's twenty year-old Pentium II PC, or the latest touch-screen mobile device.
+            p I strive in busy environments and on interesting projects: I work with a meticulous eye for detail, and I'm just as happy working from my own little web-studio (PixelCounter) as I am in your office, and with your team. As an accomplished lead-developer I am also competent in team or project management roles, confident in both meetings with clients or stakeholders, and in mentoring junior members of the team. As front-end web development is an ever-evolving field, I work hard to keep abreast of emerging technologies and I'm always happy to impart that knowledge to others.
+      
+    // section education
+    .about__section
+      .about__education
+        .about__education-title.t-title
+          .about__education-title-parallax
+          .about__education-title-name my <br> edu <br> cation
+        
+        .about__education-content
+          .container
+            .about__education-content-title 1<sup>st</sup> class <br> degree
+            .t-text-small 
+              p Computing & IT - University of Surrey
+              p During my degree course I focussed on Neural Networks and Artificial Intelligence, but my career started years earlier. At that time IE6 was king and front-end development was in a phase of transformation from archaic table-based layouts and in-line styles to the HTML5 and CSS3 standards enjoyed today. I saw this conflict of standards and emerging techniques as a challenge and have spent the past fourteen years learning, developing, testing, cursing at IE, and contributing back to the community.
+          
+    // section personal
+    .about__section
+      .about__personal
+        .about__personal-title.t-title
+          .about__personal-title-parallax
+          .about__personal-title-name Personal
+        .about__personal-content
+          .container
+            .t-text-small
+              p Outside of my professional career I'm a qualified rally driver and an every-day petrolhead with a penchant for Italian metal. I listen to a lot of music and often enjoy it quite loud (or even better: live). I watch disaster movies and American TV shows; occasionally I turn my hand to cooking, usually resulting in ordering takeaway... I play guitar and sing badly, but I play Mario Kart and Goldeneye extremely well. I'm a published author and occasional speaker, I appreciate good-quality whiskeys and dark rums before ruining them with cheap coke, ginger beer, or bitters, and I love to travel when time allows.
+            
