next project card and some modular refactor for project card

--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -76,4 +76,16 @@ block content
           .container
             .t-text-small
               p Outside of my professional career I'm a qualified rally driver and an every-day petrolhead with a penchant for Italian metal. I listen to a lot of music and often enjoy it quite loud (or even better: live). I watch disaster movies and American TV shows; occasionally I turn my hand to cooking, usually resulting in ordering takeaway... I play guitar and sing badly, but I play Mario Kart and Goldeneye extremely well. I'm a published author and occasional speaker, I appreciate good-quality whiskeys and dark rums before ruining them with cheap coke, ginger beer, or bitters, and I love to travel when time allows.
-            
+    
+    // NEXT PROJECT
+    .next-project
+      .next-project__card.np-card
+        .np-card__top PROJECT
+        .np-card__title art workshops
+        .portfolio-figure.np-card
+          .portfolio-figure-bg.--bg-green
+          a(href="#").portfolio-figure__img-holder
+            img(src='img/portfolio-project_1.png' srcset='img/portfolio-project_1@2x.png 2x')
+      .next-project__cta
+        a(href="projects").link.link--green
+          span All projects
