--- a/src/sass/components/_about.sass
+++ b/src/sass/components/_about.sass
@@ -162,6 +162,8 @@
 
 +rmin($tablet)
   .about
+    &__section
+      margin-bottom: 90px
     &__skills-wrap
       flex-direction: row
 
@@ -177,3 +179,8 @@
         flex: 0 1 50%
       &-content
         flex: 0 1 50%
+
++rmin($desktop)
+  .about
+    &__section
+      margin-bottom: 130px
