--- a/src/pug/portfolio.pug
+++ b/src/pug/portfolio.pug
@@ -13,9 +13,9 @@ block content
           a(href="#").portfolio-item__name.--hc-blue national broadcaster
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
-          .portfolio-item__figure
-            .portfolio-item__figure-bg.--bg-blue
-            a(href="#").portfolio-item__img-holder
+          .portfolio-figure
+            .portfolio-figure-bg.--bg-blue
+            a(href="#").portfolio-figure__img-holder
               img(src='img/portfolio-project_1.png' srcset='img/portfolio-project_1@2x.png 2x')
 
         // portfolio item
@@ -23,9 +23,9 @@ block content
           a(href="#").portfolio-item__name.--hc-yellow fashion magazine
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
-          .portfolio-item__figure
-            .portfolio-item__figure-bg.--bg-yellow
-            a(href="#").portfolio-item__img-holder
+          .portfolio-figure
+            .portfolio-figure-bg.--bg-yellow
+            a(href="#").portfolio-figure__img-holder
               img(src='img/portfolio-project_2.png' srcset='img/portfolio-project_2@2x.png 2x')
 
         // portfolio item
@@ -33,9 +33,9 @@ block content
           a(href="#").portfolio-item__name.--hc-pink creative portfolio
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
-          .portfolio-item__figure
-            .portfolio-item__figure-bg.--bg-pink
-            a(href="#").portfolio-item__img-holder
+          .portfolio-figure
+            .portfolio-figure-bg.--bg-pink
+            a(href="#").portfolio-figure__img-holder
               img(src='img/portfolio-project_3.png' srcset='img/portfolio-project_3@2x.png 2x')
 
         // portfolio item
@@ -43,9 +43,9 @@ block content
           a(href="#").portfolio-item__name.--hc-red RECORDING STUDIOS
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
-          .portfolio-item__figure
-            .portfolio-item__figure-bg.--bg-red
-            a(href="#").portfolio-item__img-holder
+          .portfolio-figure
+            .portfolio-figure-bg.--bg-red
+            a(href="#").portfolio-figure__img-holder
               img(src='img/portfolio-project_4.png' srcset='img/portfolio-project_4@2x.png 2x')
 
         // portfolio item
@@ -53,9 +53,9 @@ block content
           a(href="#").portfolio-item__name.--hc-black luxury hotels
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
-          .portfolio-item__figure
-            .portfolio-item__figure-bg.--bg-black
-            a(href="#").portfolio-item__img-holder
+          .portfolio-figure
+            .portfolio-figure-bg.--bg-black
+            a(href="#").portfolio-figure__img-holder
               img(src='img/portfolio-project_5.png' srcset='img/portfolio-project_5@2x.png 2x')
 
         // portfolio item
@@ -63,7 +63,7 @@ block content
           a(href="#").portfolio-item__name.--hc-green art workshops
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
-          .portfolio-item__figure
-            .portfolio-item__figure-bg.--bg-green
-            a(href="#").portfolio-item__img-holder
+          .portfolio-figure
+            .portfolio-figure-bg.--bg-green
+            a(href="#").portfolio-figure__img-holder
               img(src='img/portfolio-project_6.png' srcset='img/portfolio-project_6@2x.png 2x')
