project hero mobile draft

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -27,5 +27,6 @@
 @import components/avail
 @import components/contact
 @import components/portfolio
+@import components/project
 @import components/about
 @import components/next-project
