--- a/src/pug/portfolio-project.pug
+++ b/src/pug/portfolio-project.pug
@@ -4,14 +4,39 @@ title: Portfolio Project
 extends shared/_layout
 block content
   
-  // PORTFOLIO
-  .portfolio
+  // PROJECT
+  .project
+    .project-hero
+      .project-hero__parallax.--bg-pink
+      .container
+        .project-hero__top project
+        .project-hero__title.t-title creative <br> portfolio
+        .project-hero__short.t-text-small I'm a freelance front-end web developer based in London. With fourteen years of experience.
+        .project-hero__image
+          img(src='img/project-hero.png' srcset='img/project-hero@2x.png 2x')
+    
+    // PROJECT SCOPE    
     .container
-      .portfolio__wrapper
-        // portfolio item
-        .portfolio-item
-          .portfolio-item__name national broadcaster
-          .portfolio-item__short
-            p I'm a freelance front-end web developer based in London. With fourteen years of experience.
-          .portfolio-item__figure
-            .portfolio-item__figure-bg.--bg-blue
+      .project-scope-wrap
+        
+        .project-scope
+          .project-scope__title
+            .project-scope__parallax.--bg-pink
+            .project-scope__title-name.t-title Code <br> base
+          .project-scope__list
+            span HTML5
+            span CSS
+            span JQUERY
+            span WORDPRESS
+            span BOOTSTRAP
+        
+        .project-scope-text
+          .project__paragraph
+            .project__subtitle My Role
+            .t-text-reg
+              p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent iaculis fringilla metus, id pretium magna. Suspendisse potenti
+          .project__paragraph
+            .project__subtitle the approach
+            .t-text-reg
+              p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent iaculis fringilla metus, id pretium magna. Suspendisse potenti. Aenean tincidunt, quam eget placerat viverra, magna nisl scelerisque ligula.
+          
