added nav link to about

--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -19,6 +19,8 @@ header.header
           a(href="homepage.html") Home
         li.--h-green
           a(href="portfolio.html") Portfolio
+        li
+          a(href="about.html") About
         li.--h-yellow
           a(href="availability.html") availability
         li
