--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -17,7 +17,7 @@
     display: flex
     align-items: center
     transform-origin: center left
-    transition: .25s $ease
+    // transition: .25s $ease
     .ico
       font-size: 57px
     span
