some tests with pug json data

--- a/src/pug/blog.pug
+++ b/src/pug/blog.pug
@@ -23,6 +23,20 @@ block content
   // BLOG GRID
   .container
     .blog-grid
+
+      //- mixin blog-card(blog)
+      //-   // blog card
+      //-   .blog-card
+      //-     .blog-card__date= blog.date
+      //-     a(href="blog-article.html").blog-card__title.--hc-blue= blog.title
+      //-     .blog-card__short.t-text-small
+      //-       p= blog.short
+      //-     a(href="blog-article.html").blog-card__image
+      //-       img(src='img/blog-pic_1.png' srcset='img/blog-pic_1@2x.png 2x')
+      //- 
+      //- for blogCard in blogList
+      //-   +blog-card(blogCard)
+        
       // blog card
       .blog-card
         .blog-card__date 02 june 2017
