--- a/src/pug/availability.pug
+++ b/src/pug/availability.pug
@@ -4,12 +4,19 @@ title: Availability
 extends shared/_layout
 block content
   
-  // AVAIL :: START
-  .avail.wow
+  // AVAILABILITY :: START
+  .availability
+    
+    // title
+    .availability__title-wrap
+      .availability__title-parallax
+      // (js-rellax data-rellax-speed="-2" data-rellax-percentage="0.5")
+      .container
+        .availability__title.t-title current <br> availability
+        .availability__text.t-text-reg
+          p I update my avaialbility below on a weekly basis, so you can see the next opportunity to book me in. 
+    
     .container
-      .avail__title
-        .avail__title-parallax(js-rellax data-rellax-speed="1.5")
-        span current <br> availability
       .avail__bottom
         .avail__status
           span I currently have
@@ -17,5 +24,38 @@ block content
             span LIMITED
           span availability until Feb 2017.
         .avail__cta
-          a(href="#").link.link--yellow
-            span availability
+          a(js-scrollTo data-target=".contact-form").link.link--yellow
+            span make enquiry
+            
+          
+    // CONTACT FORM
+    .contact-enq
+      .contact-enq__left
+        // PAGE TITLE
+        .main-title
+          .main-title-parallax.--bg-yellow
+          .container
+            .main-title__name make <br> an <br> enquiry
+      .contact-enq__right
+        p I usually undertake longer-term contracts which can mean that I'm booked-up for several weeks in advance. However, I frequently also tackle additional work in my evenings and weekends (around other commitments) so do feel free to drop me a line if you have a project you think I might be able to help you with, even if my schedule looks totally full!
+        p Let me know what you need and when. I will always do what I can to fit you in.
+
+        form.contact-form(action="#" js-contact-form)
+          .ui-input-dynamic
+            label full name
+            input(type="text" name="name" placeholder="")
+          .ui-input-dynamic
+            label when do you need help?
+            input(type="text" name="time" placeholder="")  
+          .ui-input-dynamic
+            label email address
+            input(type="email" name="email" placeholder="")
+          .ui-input-dynamic
+            label other contact info
+            input(type="text" name="contact" placeholder="")
+          .ui-input-dynamic
+            label Message
+            textarea(type="text" name="message" placeholder="" rows="5")
+        
+          button(type="submit").link.link--yellow
+            span SEND MESSAGE  
