--- a/src/sass/components/_avail.sass
+++ b/src/sass/components/_avail.sass
@@ -1,4 +1,4 @@
-/* AVAILABILITY
+/* AVAILABILITY BLOCK
 .avail
   position: relative
   margin-top: 80px
@@ -98,3 +98,31 @@
       padding-top: 5px
       margin-right: 28%
       margin-left: 15%
+
+
+
+/* AVAIL PAGE
+.availability
+  &__title-wrap
+    position: relative
+    padding-bottom: 5px
+    > .container
+      position: relative
+      z-index: 2
+
+  &__title-parallax
+    display: inline-block
+    content: ' '
+    position: absolute
+    left: 0
+    top: 0
+    bottom: 0
+    width: 72vw
+    background: $colorYellow
+
+  &__title-after
+    position: relative
+    z-index: 2
+
+  &__title
+    transform: translate3d(0, -.6em, 0)
