--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,7 +2,7 @@
 @import utilities/mixins
 
 @import vendor/normalize
-@import vendor/slick
+// @import vendor/slick
 @import vendor/hamburgers
 
 @import layout/font
